# xbgas-runtime

./: CMakeLists.txt  README
doxygen/: xbgas-runtime.conf
src/: CMakeLists.txt
src/xbgas-runtime/: CMakeLists.txt  temp.c  template.txt  xbrtime-alloc.h  xbrtime-api.h  xbrtime-atomics.h  xbrtime-collectives.h  xbrtime-macros.h  xbrtime-types.h  xbrtime-version.h  xbrtime.h  xbrtime_alloc.c  xbrtime_alltoall.c  xbrtime_api.c  xbrtime_api_asm.s  xbrtime_atomics.c  xbrtime_atomics_asm.s  xbrtime_barrier.c  xbrtime_broadcast.c  xbrtime_collectives.c  xbrtime_ctor.c  xbrtime_ctor_asm.s  xbrtime_gather.c  xbrtime_gather_all.c  xbrtime_init.c  xbrtime_reduce.c  xbrtime_reduce_all.c  xbrtime_scatter.c  xbrtime_util.c  xbrtime_util_asm.s
test/: CMakeLists.txt
test/alloc/: CMakeLists.txt  alloc_test_1.c  alloc_test_2.c  alloc_test_3.c  alloc_test_4.c  alloc_test_KF_1.c  alloc_test_KF_2.c
test/alloc/testBin/: alloc_test_1  alloc_test_2  alloc_test_3  alloc_test_4  alloc_test_KF_1  alloc_test_KF_2
test/init/: CMakeLists.txt  init_test_1.c  init_test_2.c  init_test_3.c  init_test_4.c  init_test_5.c
test/init/testBin/: init_test_1  init_test_2  init_test_3  init_test_4  init_test_5
test/xfer/: CMakeLists.txt  xfer_get_test_1.c  xfer_get_test_2.c  xfer_get_test_3.c  xfer_get_test_4.c  xfer_get_test_5.c  xfer_grot_test_1.c  xfer_grot_test_2.c  xfer_grot_test_3.c  xfer_grot_test_4.c  xfer_grot_test_5.c  xfer_prot_test_1.c  xfer_prot_test_2.c  xfer_prot_test_3.c  xfer_prot_test_4.c  xfer_prot_test_5.c  xfer_put_test_1.c  xfer_put_test_2.c  xfer_put_test_3.c  xfer_put_test_4.c  xfer_put_test_5.c
test/xfer/testBin/: xfer_get_test_1  xfer_get_test_2  xfer_get_test_3  xfer_get_test_4  xfer_get_test_5  xfer_grot_test_1  xfer_grot_test_2  xfer_grot_test_3  xfer_grot_test_4  xfer_grot_test_5  xfer_prot_test_1  xfer_prot_test_2  xfer_prot_test_3  xfer_prot_test_4  xfer_prot_test_5  xfer_put_test_1  xfer_put_test_2  xfer_put_test_3  xfer_put_test_4  xfer_put_test_5
